--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  width: 100%;
+  max-width: 100%;
   .banner {
     background-color: papayawhip;
     width: 100%;
@@ -25,6 +25,7 @@
   #top {
     background-image: url('../img/img1.jpeg');
     background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height:500px;
   }
@@ -57,7 +58,7 @@
     }
     button {
       background: darkgrey;
-      width: 200px;
+      // width: 200px;
       height: 30px;
       display: block;
       margin: 0 auto;
