--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -7,14 +7,16 @@
     .box {
       width: 100%;
       button {
-        width: 80%;
-        font-size: .8em;
+      margin-bottom: 20px;
+      }
+      h5 {
+        padding: 0;
+        margin: 0 3px 3px 0;
       }
     }
   }
   #top {
-    background-size: auto;
-    background-position: left;
+    background-size: cover;
   }
 }
 
